styles/styles.css
/* globals */
:root{
    --header-color: rgba(0, 148, 115, 0.49);
    --book-unread-color: rgba(217, 217, 217, 1);
    --book-read-color: rgba(0, 148, 115, 0.35);
    --read-toggle-color: #FF0000;
    --add-book-color: #ff0000;
    --footer-color: #000;
    --footer-text-color: white;
}

/* Hide scrollbar */
html::-webkit-scrollbar{
    display: none;
    max-width: 100%;
    overflow-x: hidden;
}

body{
    margin: 0;
    padding: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    
}

/* headers */
h1, h2, h3,p{
    margin: 0;
    font-weight: 400;
}

/* Header */
header{
    background-color: var(--header-color);
    padding: 1.5rem;
    padding-left: 4rem;
    -webkit-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
    -moz-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
}

#logo{
    width: 250px;
    height: auto;
}

/* main */
main{
    flex:1;
    padding: 3rem;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;

}

/* add a book */
#addBook{
    z-index: 99;
    position: absolute;
    right: -50px;
}

/* Book card articles */
article{
    display: flex;
    flex-direction: column;
    font-family: "IBM Plex Mono", monospace;
    font-weight: 400;
    font-style: normal; 
    margin: 1rem;
    padding: 3em;
    height: 21rem;
    width: 13rem;
    -webkit-box-shadow: 4px 4px 4px 0px rgba(0,0,0,0.25);
    -moz-box-shadow: 4px 4px 4px 0px rgba(0,0,0,0.25);
    box-shadow: 4px 4px 4px 0px rgba(0,0,0,0.25);
    background-color: var(--book-unread-color);
}

article.readBook{
    background-color: var(--book-read-color); 
}

.bookTitle{
    font-size: 1.8rem;
    font-weight: 400;
}

.bookAuthor{
    font-size: 1.5rem;
    font-weight: 400;
    margin-top:1rem;
}

.bookPagesAndRead{
    padding-top: 9rem;
}


.bookPages{
    font-size: 1.6rem;
    margin-bottom: 1rem;
}

.bookReadToggle{
    font-size: 1.2rem;
    color: var(--read-toggle-color);
    font-family: 'Inter', sans-serif;
}

.bookDelete{
    height: auto;
    width: 25px;    
    position: relative;
    top: -15px;
    left:200px;
}

/* footer */

footer{
    display: flex;
    background-color: var(--footer-color);
    height: 8rem;
    width: auto;
    color:var(--footer-text-color);
    font-family: 'Open Sans', sans-serif;
    font-style: italic;
    letter-spacing: 0.5px;
    font-size: 1.2rem;
    justify-content: space-between;
    align-items: center;
    padding: 0 2rem;
    position: sticky;
}

